Fixed word-wrap in code blocks - issue #27

--- a/src/pygpt_net/data/css/markdown.css
+++ b/src/pygpt_net/data/css/markdown.css
@@ -1,3 +1,6 @@
+body {{ 
+  word-wrap: break-word;
+}}
 a {{
     color: #fff;
 }}
@@ -27,7 +30,10 @@ pre {{
     background-color: #202225;
     font-family: 'Lato';
     display: block;
+    word-wrap: break-word;
+    white-space: pre-wrap;
 }}
 code {{
     color: {QTMATERIAL_PRIMARYLIGHTCOLOR};
+    word-wrap: break-word;
 }}
