--- a/src/pygpt_net/data/css/markdown.dark.css
+++ b/src/pygpt_net/data/css/markdown.dark.css
@@ -1,5 +1,6 @@
 body {{ 
   color: #fff;
+  word-wrap: break-word;
 }}
 a {{
     color: #fff;
@@ -18,7 +19,6 @@ a {{
 }}
 .cmd {{
     color: #4d4d4d;
-    text-decoration: none;
 }}
 .ts {{
     color: #4d4d4d;
@@ -30,7 +30,10 @@ pre {{
     background-color: #202225;
     font-family: 'Lato';
     display: block;
+    word-wrap: break-word;
+    white-space: pre-wrap;
 }}
 code {{
     color: {QTMATERIAL_PRIMARYLIGHTCOLOR};
+    word-wrap: break-word;
 }}
