--- a/src/pygpt_net/data/css/markdown.light.css
+++ b/src/pygpt_net/data/css/markdown.light.css
@@ -1,3 +1,6 @@
+body {{ 
+  word-wrap: break-word;
+}}
 p {{ 
   color: #000;
 }}
@@ -30,7 +33,10 @@ pre {{
     background-color: #e9e9e9;
     font-family: 'Lato';
     display: block;
+    word-wrap: break-word;
+    white-space: pre-wrap;
 }}
 code {{
     color: #000;
+    word-wrap: break-word;
 }}
